# vigyan

./: README.md  pyproject.toml
src/vigyan/: __init__.py  cli.py  pipeline.py
src/vigyan/agent/: __init__.py  research_agent.py
src/vigyan/cli/: __init__.py  app.py  ingest.py  query.py
src/vigyan/core/: interfaces.py  models.py
src/vigyan/embedders/: openai_embedder.py
src/vigyan/parsers/: grobid.py
src/vigyan/vectordb/: __init__.py  lancedb_store.py
