[project]
name = "vigyan"
version = "0.0.1"
description = "High accuracy agentic search on scientific documents with citations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lancedb>=0.25.2",
    "lxml>=6.0.2",
    "pyarrow>=14.0.1",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "tantivy>=0.25.0",
    "platformdirs>=4.5.1",
]

[project.scripts]
vigyan = "vigyan.cli:cli"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
